# gpu-play

./: CMakeLists.txt  Containerfile  README.md
octave/: em_alg_function.m  gauss.m  mixt_model.m  test1.m  test2.m
src/: CMakeLists.txt  welcome.cu  welcome.hpp
src/common/: assert.hpp  file_io.cpp  file_io.hpp  math.cu  math.hpp  matrix.hpp  random_float_vector.hpp  scalar.cpp  scalar.hpp  vector.hpp
src/cublas/: cublas_wrap.cu  cublas_wrap.hpp
src/em_alg/: covar_est.cpp  covar_est.cu  covar_est.hpp  em_alg.cpp  em_alg.cu  em_alg.hpp  error_est.cpp  error_est.cu  error_est.hpp  mean_est.cpp  mean_est.cu  mean_est.hpp  posterior.cpp  posterior.cu  posterior.hpp
test/: CMakeLists.txt  unit_tests.cpp
test/data/test1/: denominators.txt  densities.txt  error.txt  initial_mean.txt  initial_priors.txt  observations.txt  posteriors.txt  updated_covar.txt  updated_mean.txt  updated_prior.txt
test/data/test2/: classes.txt  covar_est.txt  error_est.txt  error_threshold.txt  initial_covariance.txt  mean_est.txt  num_iter.txt  observations.txt  prior_est.txt
